# nepnes

./: .clang-format  .gitignore  .gitmodules  .project.vim  CMakeLists.txt  LICENSE  README.md  configure  init-sandbox.sh
app/nepnes/: CMakeLists.txt  app.c  app.h  app_window.c  app_window.h  main.c  main.cpp  ui.cpp  ui.h  version.h
app/nepnes/assets/: nepnes.desktop
lib/: CMakeLists.txt
lib/6502/include/: cpu.h  da.h  instruction.h
lib/6502/src/: cpu.c  da.c  instruction.c
lib/nes/include/: common.h  mapper.h  rom.h
lib/nes/src/: mapper.c  rom.c
lib/std/include/: flat_set.h  io.h  util.h
lib/std/src/: flat_set.c  io.c  util.c
src/: .clang-format  .project.vim  CMakeLists.txt  cpu.c  cpu.h  ines.c  ines.h  instruction.c  instruction.h  io.c  io.h  main.cpp  rom.c  rom.h  ui.cpp  ui.hpp  util.c  util.h
src/nn/: nn.h  ui.hpp
src/nn/6502/: cpu.c  cpu.h  instruction.c  instruction.h
src/nn/nes/: mapper.c  mapper.h  rom.c  rom.h
src/nn/std/: flat_set.c  io.c  util.c  util.h
src/nn/tools/: CMakeLists.txt
src/nn/tools/da/: da.c  da.h  main.c  options.c
src/nn/tools/dbg/: CMakeLists.txt  assembly_pane.c  assembly_pane.h  breakpoints_pane.c  breakpoints_pane.h  cpu_pane.c  cpu_pane.h  debugger.c  debugger.h  main.c  nc.c  nc.h  options.c  status_pane.c  status_pane.h
src/nn/tools/romdump/: main.c  options.c  options.h
src/tools/: CMakeLists.txt
src/tools/da/: CMakeLists.txt  da.c  main.c  options.c  options.h
src/tools/dbg/: CMakeLists.txt  assembly_pane.c  assembly_pane.h  breakpoints_pane.c  breakpoints_pane.h  cpu_pane.c  cpu_pane.h  dbg.c  dbg.h  debugger.c  debugger.h  flat_set.c  flat_set.h  main.c  options.c  options.h  status_pane.c  status_pane.h  window.c  window.h
src/tools/romdump/: CMakeLists.txt  main.c  options.c  options.h  romdump.c
src/unittest/: CMakeLists.txt  da_test.c  flat_set_test.c  flat_set_test.h  ines_test.c  ines_test.h  main.c  opcode_test.c  opcode_test.h  rom_test.c  rom_test.h
src/unittest/reference/da/nes-test-roms/apu_mixer/: dmc.ref  noise.ref  square.ref  triangle.ref
src/unittest/reference/da/nes-test-roms/apu_reset/: 4015_cleared.ref  4017_timing.ref  4017_written.ref  len_ctrs_enabled.ref  works_immediately.ref
src/unittest/reference/da/nes-test-roms/apu_test/: apu_test.ref
src/unittest/reference/da/nes-test-roms/blargg_apu_2005.07.30/: 02.len_table.ref  03.irq_flag.ref  04.clock_jitter.ref  05.len_timing_mode0.ref  06.len_timing_mode1.ref  07.irq_flag_timing.ref  08.irq_timing.ref  10.len_halt_timing.ref
src/unittest/reference/da/nes-test-roms/blargg_ppu_tests_2005.09.15b/: palette_ram.ref  power_up_palette.ref  sprite_ram.ref  vram_access.ref
src/unittest/reference/da/nes-test-roms/branch_timing_tests/: 2.Backward_Branch.ref  3.Forward_Branch.ref
src/unittest/reference/da/nes-test-roms/cpu_dummy_reads/: cpu_dummy_reads.ref
src/unittest/reference/da/nes-test-roms/cpu_exec_space/: test_cpu_exec_space_apu.ref  test_cpu_exec_space_ppuio.ref
src/unittest/reference/da/nes-test-roms/cpu_interrupts_v2/: cpu_interrupts.ref
src/unittest/reference/da/nes-test-roms/cpu_reset/: ram_after_reset.ref  registers.ref
src/unittest/reference/da/nes-test-roms/cpu_timing_test6/: cpu_timing_test.ref
src/unittest/reference/da/nes-test-roms/dmc_dma_during_read4/: dma_4016_read.ref  read_write_2007.ref
src/unittest/reference/da/nes-test-roms/dmc_tests/: buffer_retained.ref  status.ref  status_irq.ref
src/unittest/reference/da/nes-test-roms/dpcmletterbox/: dpcmletterbox.ref
src/unittest/reference/da/nes-test-roms/exram/: mmc5exram.ref
src/unittest/reference/da/nes-test-roms/full_palette/: flowing_palette.ref
src/unittest/reference/da/nes-test-roms/instr_misc/: instr_misc.ref
src/unittest/reference/da/nes-test-roms/instr_timing/: instr_timing.ref
src/unittest/reference/da/nes-test-roms/mmc3_irq_tests/: 2.Details.ref  3.A12_clocking.ref  4.Scanline_timing.ref  5.MMC3_rev_A.ref
src/unittest/reference/da/nes-test-roms/mmc3_test/: 2-details.ref  4-scanline_timing.ref  6-MMC6.ref
src/unittest/reference/da/nes-test-roms/nes15-1.0.0/: nes15-NTSC.ref  nes15-PAL.ref
src/unittest/reference/da/nes-test-roms/nmi_sync/: demo_ntsc.ref  demo_pal.ref
src/unittest/reference/da/nes-test-roms/nrom368/: test1.ref
src/unittest/reference/da/nes-test-roms/ny2011/: ny2011.ref
src/unittest/reference/da/nes-test-roms/oam_read/: oam_read.ref
src/unittest/reference/da/nes-test-roms/oam_stress/: oam_stress.ref
src/unittest/reference/da/nes-test-roms/other/: 2003-test.ref  8bitpeoples_-_deadline_console_invitro.ref  BladeBuster.ref  SimpleParallaxDemo.ref  apocalypse.ref  blargg_litewall-2.ref  blargg_litewall-9.ref  fceuxd.ref  firefly.ref  high-hopes.ref  litewall2.ref  litewall3.ref  manhole.ref  nestest.ref  new-game.ref  nintendulator.ref  physics.0.1.ref  quantum_disco_brothers_by_wAMMA.ref  snow.ref  test001.ref  window_old_ntsc.ref
src/unittest/reference/da/nes-test-roms/pal_apu_tests/: 02.len_table.ref  03.irq_flag.ref  05.len_timing_mode0.ref  06.len_timing_mode1.ref  07.irq_flag_timing.ref
src/unittest/reference/da/nes-test-roms/read_joy3/: count_errors.ref  count_errors_fast.ref  test_buttons.ref
src/unittest/reference/da/nes-test-roms/scanline/: scanline.ref
src/unittest/reference/da/nes-test-roms/scrolltest/: scroll.ref
src/unittest/reference/da/nes-test-roms/sprite_hit_tests_2005.10.05/: 01.basics.ref  04.flip.ref  06.right_edge.ref  07.screen_bottom.ref  08.double_height.ref  09.timing_basics.ref  11.edge_timing.ref
src/unittest/reference/da/nes-test-roms/sprite_overflow_tests/: 1.Basics.ref  2.Details.ref  3.Timing.ref
src/unittest/reference/da/nes-test-roms/spritecans-2011/: spritecans.ref
src/unittest/reference/da/nes-test-roms/stomper/: smwstomp.ref
src/unittest/reference/da/nes-test-roms/tutor/: tutor.ref
src/unittest/reference/da/nes-test-roms/tvpassfail/: tv.ref
src/unittest/reference/da/nes-test-roms/vaus-test/: vaus-test.ref
src/unittest/reference/da/nes-test-roms/vbl_nmi_timing/: 1.frame_basics.ref  2.vbl_timing.ref  5.nmi_suppression.ref  6.nmi_disable.ref  (+1 more)
(+150 files in other folders)
